added name to engine col

--- a/SimTECH/SimTECH/Pages/Factors/Strategies.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Strategies.razor
@@ -54,6 +54,7 @@
                 <Columns>
                     <PropertyColumn Property="e => e.Name" CellStyleFunc="_applyTyreColouring" />
                     <PropertyColumn Property="e => e.State" IsEditable="false" />
+                    <PropertyColumn Property="e => e.Length" />
                     <PropertyColumn Property="e => e.Pace" />
                     <PropertyColumn Property="e => e.WearMax" />
                     <PropertyColumn Property="e => e.WearMin" />
