--- a/SimTECH/SimTECH/Pages/Season/SeasonEngineEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEngineEditor.razor
@@ -8,16 +8,16 @@
             {
                 @if (Model.Id == 0)
                 {
-                    <MudSelect T="long" @bind-Value="@Model.EngineId">
+                    <MudSelect T="long" @bind-Value="@Model.EngineId" Label="Engine">
                         @foreach (var engine in Engines)
                         {
                             <MudSelectItem Value="engine.Id">@engine.Name</MudSelectItem>
                         }
                     </MudSelect>
                 }
-                <MudTextField @bind-Value="@Model.Name" Required />
-                <MudNumericField @bind-Value="@Model.Power" />
-                <MudNumericField @bind-Value="@Model.Reliability" />
+                <MudTextField @bind-Value="@Model.Name" Label="Name" Required />
+                <MudNumericField @bind-Value="@Model.Power" Label="Power" />
+                <MudNumericField @bind-Value="@Model.Reliability" Label="Reliability" />
             }
         </MudForm>
     </DialogContent>
