--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -8,7 +8,7 @@
 
 <PageTitle>Overview</PageTitle>
 
-<CascadingValue Value="Season">
+<CascadingValue Value="Season" IsFixed="true"> @* still should confirm if isfixed also works when re-assigning the object by loading a new season *@
     @if (Season != null)
     {
         <MudTabs Outlined="true" Centered="true">
