--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -5,11 +5,12 @@
 <PageTitle>Manufacturers</PageTitle>
 
 <MudContainer>
-    <MudPaper Class="d-flex justify-space-between pa-2 mx-2 my-2">
-        <MudText Typo="Typo.h4">Tyre manufacturers</MudText>
-        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddManufacturer">New</MudButton>
-    </MudPaper>
-    <MudTable Items="@ManufacturerData" Bordered="true">
+    <MudTable Items="@ManufacturerData" Bordered="true" Class="mt-2">
+        <ToolBarContent>
+            <MudText Typo="Typo.h4">Tyre manufacturers</MudText>
+            <MudSpacer />
+            <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddManufacturer">New</MudButton>
+        </ToolBarContent>
         <HeaderContent>
             <MudTh>Name</MudTh>
             <MudTh>Pace</MudTh>
