--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+
+@inject ProtectedLocalStorage LocalStorage
 @inject SimAuthenticationStateProvider AuthenticationProvider
 @inject NavigationManager Nav
 @attribute [AllowAnonymous]
@@ -10,56 +12,55 @@
         <MudItem xs="12" sm="6" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
                 <MudCountrySelect @bind-Value="_selectedCountry" />
+
+                <MudText>@exampleStore</MudText>
             </MudPaper>
         </MudItem>
+
         <MudItem xs="12" sm="6" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
                 <h1>Hello, world!</h1>
                 Welcome to your new app.
             </MudPaper>
         </MudItem>
+
         <MudItem xs="12" sm="12" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                <span class="flag flag-md">@_selectedCountry.CountryCodeToEmoji()</span> @_selectedCountry.GetDescription()
+                <CountryFlag Code="_selectedCountry" IncludeName="true" />
+
+                <MudButton OnClick="(async () => await SetExample(newExampleString))">SetExample</MudButton>
             </MudPaper>
         </MudItem>
+
         <MudItem xs="12" sm="6">
             <MudGrid>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                        <CountryFlag Code="Country.NL" />
+                        <AuthorizeView>
+                            <Authorized>
+                                <p>Damn @(AuthenticationProvider.CurrentUser?.FullName ?? "wtf who"), good to see you logged in.</p>
+                            </Authorized>
+                            <NotAuthorized>
+                                <p>What are you doing here, mate. You aren't even logged in!</p>
+                            </NotAuthorized>
+                        </AuthorizeView>
                     </MudPaper>
                 </MudItem>
+
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                        la mayo
+                        <AuthorizeView Roles="admin">
+                            <Authorized>
+                                <p>O damn, hello Mr. Admin! Love yo see ya :)</p>
+                            </Authorized>
+                        </AuthorizeView>
                     </MudPaper>
                 </MudItem>
             </MudGrid>
         </MudItem>
+
         <MudItem xs="12" sm="6">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 100%">
-                <AuthorizeView>
-                    <Authorized>
-                        <p>Damn @(AuthenticationProvider.CurrentUser?.FullName ?? "wtf who"), good to see you logged in.</p>
-                    </Authorized>
-                    <NotAuthorized>
-                        <p>What are you doing here, mate. You aren't even logged in!</p>
-                    </NotAuthorized>
-                </AuthorizeView>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                <AuthorizeView Roles="admin">
-                    <Authorized>
-                        <p>O damn, hello Mr. Admin! Love yo see ya :)</p>
-                    </Authorized>
-                </AuthorizeView>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
                 <AuthorizeView Policy="CoolOnly">
                     <Authorized>
                         <p>Good to see some cool dudes here</p>
@@ -68,10 +69,7 @@
                         <p>No offense, but you're kinda cringe... lol</p>
                     </NotAuthorized>
                 </AuthorizeView>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="12" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+
                 <AuthorizeView Policy="ChoicePolicy" Resource="3">
                     <Authorized>
                         <p>But man, you wouldn't believe the cringe-worthy dudes that show up here.</p>
@@ -87,6 +85,16 @@
 
 @code {
     public Country _selectedCountry { get; set; } = Country.NL;
+    private string exampleStore = "nothing stored yo";
+    private string newExampleString = "this is a new example string for storage";
+
+    protected override async Task OnInitializedAsync()
+    {
+        var storedExample = await LocalStorage.GetAsync<string>("example");
+        exampleStore = storedExample.Success ? storedExample.Value : "yikes, really nothing stored yo";
+    }
+
+    private async Task SetExample(string text) => await LocalStorage.SetAsync("example", text);
 
     private void NavigateHome()
     {
