--- a/SimTECH/SimTECH/Pages/Season/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEngines.razor
@@ -2,11 +2,12 @@
 @inject SeasonEntrantService EntrantService
 @inject IDialogService DialogService
 
-<MudContainer Class="d-flex justify-space-between pa-2 mx-2 my-2">
-    <MudText Typo="Typo.h4">SeasonEngines</MudText>
-    <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="EnterEngine">New</MudButton>
-</MudContainer>
-<MudDataGrid T="SeasonEngine" Items="SeasonEngineData">
+<MudDataGrid T="SeasonEngine" Items="SeasonEngineData" Class="my-2">
+    <ToolBarContent>
+        <MudText Typo="Typo.h4">SeasonEngines</MudText>
+        <MudSpacer />
+        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="EnterEngine">New</MudButton>
+    </ToolBarContent>
     <Columns>
         <PropertyColumn Property="e => e.Name" />
         <PropertyColumn Property="e => e.Power" />
