--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -5,11 +5,12 @@
 <PageTitle>Engines</PageTitle>
 
 <MudContainer>
-    <MudPaper Class="d-flex justify-space-between pa-2 mx-2 my-2">
-        <MudText Typo="Typo.h4">Engines</MudText>
-        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddEngine">New</MudButton>
-    </MudPaper>
-    <MudTable Items="@EngineNames" Bordered="true">
+    <MudTable Items="@EngineNames" Bordered="true" Class="mt-2">
+        <ToolBarContent>
+            <MudText Typo="Typo.h4">Engines</MudText>
+            <MudSpacer />
+            <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddEngine">New</MudButton>
+        </ToolBarContent>
         <HeaderContent>
             <MudTh>Name</MudTh>
             <MudTh>State</MudTh>
