--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -6,11 +6,12 @@
 <PageTitle>Teams</PageTitle>
 
 <MudContainer>
-    <MudContainer Class="d-flex justify-space-between pa-2 mx-2 my-2">
-        <MudText Typo="Typo.h4">Teams</MudText>
-        <MudButton Variant="Variant.Outlined" Color="Color.Success" OnClick="AddTeam">New</MudButton>
-    </MudContainer>
-    <MudDataGrid T="Team" Items="@TeamData">
+    <MudDataGrid T="Team" Items="@TeamData" Class="mt-2">
+        <ToolBarContent>
+            <MudText Typo="Typo.h4">Teams</MudText>
+            <MudSpacer />
+            <MudButton Variant="Variant.Outlined" Color="Color.Success" OnClick="AddTeam">New</MudButton>
+        </ToolBarContent>
         <Columns>
             <HierarchyColumn T="Team" />
             <PropertyColumn Property="e => e.Name" />
