--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -6,11 +6,12 @@
 <PageTitle>Tracks</PageTitle>
 
 <MudContainer>
-    <MudPaper Class="d-flex justify-space-between pa-2 mx-2 my-2">
-        <MudText Typo="Typo.h4">Tracks</MudText>
-        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddTrack">New</MudButton>
-    </MudPaper>
-    <MudTable Items="@TrackData" ReadOnly="@_readOnly" Bordered="true">
+    <MudTable Items="@TrackData" ReadOnly="@_readOnly" Bordered="true" Class="mt-2">
+        <ToolBarContent>
+            <MudText Typo="Typo.h4">Tracks</MudText>
+            <MudSpacer />
+            <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddTrack">New</MudButton>
+        </ToolBarContent>
         <HeaderContent>
             <MudTh>Name</MudTh>
             <MudTh>Country</MudTh>
